@startuml

title __RESOURCES's Class Diagram__\n

  namespace com.vrush.microservices.searching {
    namespace resources {
      class com.vrush.microservices.searching.resources.BookingResource {
          {static} - log : Logger
          + BookingResource()
          + findAll()
      }
    }
  }
  

  namespace com.vrush.microservices.searching {
    namespace resources {
      class com.vrush.microservices.searching.resources.RoomResource {
          {static} - log : Logger
          + RoomResource()
          + findAll()
          + findAllAvailableRooms()
          + findById()
          + findUnavailableDates()
      }
    }
  }
  

  com.vrush.microservices.searching.resources.BookingResource o-- com.vrush.microservices.searching.service.BookingService : service
  com.vrush.microservices.searching.resources.RoomResource o-- com.vrush.microservices.searching.service.RoomService : service


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
